--- a/.github/workflows/main_intucodechallenge.yml
+++ b/.github/workflows/main_intucodechallenge.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
+      # Ant
+# Build with Apache Ant
       - task: Ant@1
         inputs:
           workingDirectory: ''
@@ -23,9 +26,7 @@ jobs:
           jdkArchitectureOption: 'x64'
           publishJUnitResults: false
           testResultsFiles: '**/TEST-*.xml'
-    
-      - uses: actions/checkout@v2
-
+          
       - name: Set up Java version
         uses: actions/setup-java@v1
         with:
