--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,7 @@ j2ee.server.middleware=D:/Glassfish 4.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\samuel.lim2\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+#user.properties.file=C:\\Users\\samuel.lim2\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+libs.CopyLibs.classpath= extra/org-netbeans-modules-java-j2seproject-copylibstask.jar
+libs.CopyLibs.displayName=CopyLibs Task
+libs.CopyLibs.prop-version=1.0
