--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -11,3 +11,4 @@ selected.browser=default
 libs.CopyLibs.classpath= extra/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=1.0
+user.properties.file=C:\\Users\\samuel.lim2\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
